--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/apontamentos?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=suasenha
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+kaspper.opeanapi.dev-url=http://localhost:8080
+kaspper.opeanapi.prod-url=http://meuservidor.com
